<resources>
    <string name="app_name">FireBase_Chat_Example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_you_have_an_account_yet_register">Don\'t you have an account yet? Sign up</string>
    <string name="have_an_account_sign_in">Have an account? Sign in</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="enter_message">Enter message</string>
</resources>